fixed create table locally yaml

--- a/todo-app/postgres-create-table.yaml
+++ b/todo-app/postgres-create-table.yaml
@@ -19,7 +19,7 @@ spec:
           command: ["psql"]
           args:
             [
-              "--host=localhost",
+              "--host=postgresql",
               "--username=admin",
               "--no-password",
               "--dbname=todo",
